JustLucky/Landing/landing.css
:root {
    --default-red: rgb(220, 20, 60);
    --text-color: rgb(240, 240, 240);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    overflow-x: hidden;
}


.nav_banner {
    position: relative;
    margin: 2em;
}

nav {
    overflow: hidden;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav__links {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav__links>.nav__link {
    text-align: center;
    padding: .25em;
    margin: 0 2em;
    cursor: pointer;
}

.nav__links>a.nav__link {
    text-decoration: none;
    text-transform: capitalize;
    color: black;
}

.nav__link.active:hover {
    background-color: chartreuse;
    place-items: center;
    width: .25em;
    height: .25em;
    border-radius: 50%;
}

.nav__cinema-logo>span {
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav__cinema-logo>span>h1 {
    text-transform: uppercase;
    text-align: center;
    font-size: 1.25em;
}

.nav__button>button {
    text-align: center;
    text-transform: capitalize;
    padding: .75em 2em;
    border-radius: .75em;
    border: none;
    cursor: pointer;
    transition: ease-in;
    transition-duration: 250ms;
}

.nav__button > button:hover {
    transform: scale(.95);
    background-color: var(--default-red);
    color: var(--text-color);
}


.banner_hero {
    position: relative;
    margin: 2em;
    padding: 1em 2em;
}

.film__schedule {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin-top: 1em;
}

.film__schedule-title {
    padding: .25em;
    max-width: 50%;
    font-size: 3.5em;
    margin-bottom: 2em;

}

.film__schedule {
    margin-top: 2em;
    display: inline-block;
}

.film__schedule-top1 {
    display: flex;
    justify-content: flex-start;
    align-items: start;
}

.film__schedule-top1 .film__schedule-book {
    padding: 0.25em 3em;
    display: flex;
    justify-content: space-evenly;
    place-items: center;
}

.film__schedule-book button {
    border-radius: .75em;
    border: none;
    padding: 1em 3em;
    text-transform: uppercase;
    font-size: .89em;
    font-weight: bold;
    cursor: pointer;
    transition: ease-in-out;
    transition-duration: 250ms;
}

.film__schedule-book button:hover {
    transform: perspective(.5);
    transform: scale(1.1);
    background-color: var(--default-red);
    color: var(--text-color)
}


.film__schedule-top1 .film__schedule-data {
    padding: 0.05em 2em;
    margin-left: 10em;
    display: flex;
    justify-content: flex-end;
    flex-direction: column-reverse;
    font-size: .89em;
}

.film__schedule-top2 {
    /* padding: 1.5em 0; */
    display: flex;
    justify-content: space-between;
    margin-right: auto;
    margin-left: auto;
    flex-direction: row;

}

.film__schedule-top2 .banner__section-slider {
    display: flex;
    /* flex-flow: column-reverse wrap; */
    /* justify-content: space-between; */
}

.slider__arrows {
    position: relative;
    display: flex;
    margin-top: 6em;
}

.slider__arrows > button {
    padding: .5em 1em;
    background-color: transparent;
    border-radius: .25em;
    font-size: 1.5em;
    border: none;
    outline: none;
}

.slider__arrows > button > i {
    display: flex;
    justify-content: center;
    place-items: center;
}

.slider__arrows #prev {
    margin-right: 10em;
}
.slider__arrows #next {
    margin-left: 10em;
}

#prev, #next {
    cursor: pointer;
    
}

.slider__numbers {
    font-size: 1.5em;
    font-weight: 800;
    padding: 0 .5em;
    display: flex;
    justify-content: center;
    place-items: center;
}



.film__schedule-top2 .film__schedule-trailer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 1em;
}


.film__schedule-trailer button#watch-trailer {
    align-items: center;
    display: flex;
    justify-content: center;
    /* padding: 3em; */
    width: 6em;
    height: 6em;
    margin-bottom: 0.5em;
    border: none;
    border-radius: 50%;
    cursor: pointer;
    transition: ease-out;
    transition-duration: 250ms;
}

.film__schedule-trailer button:hover {
    background-color: var(--default-red);
    color: var(--text-color);
    transform: scale(1.1);
}
#watch-trailer > i {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5em;
    font-weight: bold;
}

.film__schedule-trailer #trailer-detail  {
    padding: 0.5em;
    display: flex;
    justify-content: center;
    font-size: .9em;
}

.xline {
    margin: 2.5em 0;
    width: 100%;
    border: 1px solid black;
}

section.main {
    width: 100%;
    position: absolute;
    margin: 0 1em;
    /* padding: .25em; */
}

.main__header {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2em;
}

.main__header-title {
    display: flex;
    justify-content: center;
    align-self: center;
}

.main__header-title h2 {
    text-align: center;
    text-transform: uppercase;
}

.main__header-search {
    margin-right: 1em;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.main__header-search i {
    position: absolute;
    margin-right: .5em;
    padding: .5em;
    font-size: 1.05em;
}

.main__header-search input {
    width: 30em;
    padding: .75em;
}

main {
    position: absolute;
    border: 1px solid yellow;
    padding: 1em;
    /* padding: 1em; */
    /* display: inline-grid; */
    /* gap: .5em .5em; */
    /* grid-template-columns: max-content; */
    /* grid-column: calc(100% - 2em); */
}

.film_card {
    position: relative;
    /* margin: 0 0 0 2em; */
    padding: 0 1em;
    /* background-color: green; */
    aspect-ratio: 9/16;
    min-width: 10em;
    /* display: flex; */
    flex-direction: column;
    justify-content: center;
    align-items: end;
}

.film_card img {
    width: 12.5rem;
    /* width: 75%; */
    height: 18.75em;
    justify-content: center;
    align-items: center;
    object-fit: cover;
    border: 1px solid var(--default-red);
}

.film_about {
    padding-top: .5em;
    display: flex;
    text-align: center;
    flex-direction: column;
    justify-content: start;
}

